List markers should only avoid floats on their own line.

Bug: 726583
Change-Id: I4bec94e9034b00b4328f5c2c33c2fa95d0d83698
Reviewed-on: https://chromium-review.googlesource.com/517822
Commit-Queue: Emil A Eklund <eae@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#475574}
Former-commit-id: fc0213148ed03241f5480b039bba5d2b8ae3e831